force-app/main/default/objects/cgcloud__Data_Type__c/cgcloud__Data_Type__c.object-meta.xml
<CustomObject>
    <description>Holds the flexible data type</description>
    <label>Data Type</label>
    <nameField>
        <label>Data Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>