force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Append_Empty_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Append_Empty_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Empty Item</label>
    <type>Checkbox</type>
</CustomField>