force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Customizable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customizable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Unchecked, data type will be only used on Mobility</description>
    <label>Customizable</label>
    <type>Checkbox</type>
</CustomField>