force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Data_Length__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Length__c</fullName>
    <label>Data Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>