force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>