force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Long_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Long_Name__c</fullName>
    <label>Long Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>