force-app/main/default/objects/cgcloud__Data_Type__c/fields/cgcloud__Manual__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>