force-app/main/default/objects/cgcloud__Data_Type__c/recordTypes/cgcloud__Date.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>