force-app/main/default/objects/cgcloud__Data_Type__c/recordTypes/cgcloud__Decimal.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Decimal</fullName>
    <active>true</active>
    <label>Decimal</label>
</RecordType>