force-app/main/default/objects/cgcloud__Data_Type__c/recordTypes/cgcloud__LongText.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__LongText</fullName>
    <active>true</active>
    <label>String</label>
</RecordType>