force-app/main/default/objects/cgcloud__Data_Type__c/recordTypes/cgcloud__Toggle.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Toggle</fullName>
    <active>true</active>
    <label>Toggle</label>
</RecordType>