force-app/main/default/objects/cgcloud__Data_Type__c/validationRules/cgcloud__Manual_Flag_Is_Not_Changeable.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Manual_Flag_Is_Not_Changeable</fullName>
    <active>true</active>
    <description>The checkbox &quot;Manual__c&quot; cannot be edited.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Manual__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Manual__c</errorDisplayField>
    <errorMessage>The Manual can&apos;t be edited after Data Type creation.</errorMessage>
</ValidationRule>